<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_activity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="25dp" />
        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp" />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/your_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:inputType="number"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/select_who_you_are" />

        <RadioGroup
            android:id="@+id/radio_group_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/farmer_role_radiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farmer"
                android:layout_weight="0.5"/>

            <RadioButton
                android:id="@+id/worker_role_radiobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker"
                android:layout_weight="0.5"/>

        </RadioGroup>

        <TextView
            android:id="@+id/fare_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fare_in_rs_day"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:textCursorDrawable="@null"
            android:hint="Ex: 300"
            android:inputType="number"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@drawable/et_custom"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="@android:color/white"
            android:text="@string/register"/>

    </LinearLayout>
</ScrollView>

