<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Booking_Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/green_alpha_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selected_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="10/03/2021"
                android:textSize="17sp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/farmer_details"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="30dp"
            android:background="@drawable/details_form_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="25dp"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/bookie_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/phone_number_colon"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/bookie_phnumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:maxLength="13"
                android:inputType="phone"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/village"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/bookie_village"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"/>

            <Button
                android:id="@+id/confirm_book_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/confirm_booking"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>