<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center">



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="Enter OTP"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/phone_number"
                android:padding="15dp"
                android:inputType="phone"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:layout_below="@id/tv_subtitle"
                android:background="@drawable/et_custom"
                android:visibility="gone"
                android:textSize="15sp" />
            <Button
                android:id="@+id/request_otp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:layout_below="@id/et_phone"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/white"
                android:text="GET OTP"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/request_otp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/otp"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_otp"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>